Kubernetes/Prometheus-Stack/yamls/ig-kube-prometheus-stack.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-grafana-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-grafana-security
  namespace: monitoring
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-grafana-websecure
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.urbaman.it`)
      services:
      - name: kube-prometheus-stack-grafana
        port: 80
        serversTransport: monitoring-grafana-transport
      middlewares:
        - name: monitoring-grafana-security
  tls:
    secretName: grafana-urbaman-it
    options:
      name: monitoring-grafana-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-grafana-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.urbaman.it`)
      services:
      - name: kube-prometheus-stack-grafana
        port: 80
      middlewares:
        - name: monitoring-grafana-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-prometheus-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-prometheus-security
  namespace: monitoring
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-prometheus-websecure
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.urbaman.it`)
      services:
      - name: kube-prometheus-stack-prometheus
        port: 9090
        serversTransport: monitoring-prometheus-transport
      middlewares:
        - name: monitoring-prometheus-security
  tls:
    secretName: prometheus-urbaman-it
    options:
      name: monitoring-prometheus-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-prometheus-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.urbaman.it`)
      services:
      - name: kube-prometheus-stack-prometheus
        port: 9090
      middlewares:
        - name: monitoring-prometheus-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-alertmanager-https-redirect
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-alertmanager-security
  namespace: monitoring
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-alertmanager-websecure
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.urbaman.it`)
      services:
      - name: kube-prometheus-stack-alertmanager
        port: 9093
        serversTransport: monitoring-alertmanager-transport
      middlewares:
        - name: monitoring-alertmanager-security
  tls:
    secretName: alertmanager-urbaman-it
    options:
      name: monitoring-alertmanager-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-alertmanager-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`alertmanager.urbaman.it`)
      services:
      - name: kube-prometheus-stack-alertmanager
        port: 9093
      middlewares:
        - name: monitoring-alertmanager-https-redirect
